50. Spring Pet Clinic - Create Interfaces for Services